Fix: checkout method and remove unused import